@@ -8,7 +8,7 @@ from .thresh_utility import normalize, cut
 class BOOT(BaseThresholder):
     r"""BOOT class for Bootstrapping thresholder.
 
-       Use a boostrapping based method to find a non-parametric means
+       Use a bootstrapping based method to find a non-parametric means
        to threshold scores generated by the decision_scores where outliers
        are set to any value beyond the mean of the confidence intervals.
        See :cite:`martin2006boot` for details
