@@ -8,10 +8,10 @@ from .thresh_utility import normalize, cut
 class MCST(BaseThresholder):
     r"""MCST class for Monte Carlo Shapiro Tests thresholder.
 
-       Use uniform random sampling and statstical testing to evaluate a
+       Use uniform random sampling and statistical testing to evaluate a
        non-parametric means to threshold scores generated by the decision_scores
        where outliers are set to any value beyond the minimum value left after
-       iterative Shapiro-Wilk tests have occured. Note** accuracy decreases with
+       iterative Shapiro-Wilk tests have occurred. Note** accuracy decreases with
        array size. For good results the should be array<1000. However still this
        threshold method may fail at any array size.
        See :cite:`coin2008mcst` for details.
@@ -30,9 +30,9 @@ class MCST(BaseThresholder):
        Notes
        -----
 
-       The Shapiro-Wilk test is a frequentist statstical test for normality.
+       The Shapiro-Wilk test is a frequentist statistical test for normality.
        It is used to test the null-hypothesis that the decision scores came
-       from a normal distribution. This test statstic is defined as:
+       from a normal distribution. This test statistic is defined as:
 
        .. math::
 
