@@ -6,12 +6,12 @@ from .thresh_utility import normalize, cut
 
 
 class QMCD(BaseThresholder):
-    """QMCD class for Quasi-Monte Carlo Discreprancy thresholder.
+    """QMCD class for Quasi-Monte Carlo Discrepancy thresholder.
 
-       Use the quasi-Monte Carlo discreprancy to evaluate a non-parametric means
+       Use the quasi-Monte Carlo discrepancy to evaluate a non-parametric means
        to threshold scores generated by the decision_scores where outliers
        are set to any value beyond and percentile or quantile of one minus the
-       descreperancy. See :cite:`iouchtchenko2019qmcd` for details.
+       discrepancy. See :cite:`iouchtchenko2019qmcd` for details.
 
        Parameters
        ----------
@@ -27,14 +27,14 @@ class QMCD(BaseThresholder):
        lim : {'Q', 'P'}, optional (default='P')
             Filtering method to threshold scores using 1 - discrepancy
 
-            - 'Q': Use quntile limiting
+            - 'Q': Use quantile limiting
             - 'P': Use percentile limiting
 
 
        Attributes
        ----------
 
-       thresh_ : threshold value that seperates inliers from outliers
+       thresh_ : threshold value that separates inliers from outliers
 
        Notes
        -----
