@@ -19,7 +19,7 @@ class ZSCORE(BaseThresholder):
        Attributes
        ----------
 
-       thresh_ : threshold value that seperates inliers from outliers
+       thresh_ : threshold value that separates inliers from outliers
 
        Notes
        -----
@@ -31,7 +31,7 @@ class ZSCORE(BaseThresholder):
            Z = \frac{x-\bar{x}}{\sigma} \mathrm{,}
 
        where :math:`\bar{x}` and :math:`\sigma` are the mean and the
-       standard deviation of the decsion scores respectively. The threshold
+       standard deviation of the decision scores respectively. The threshold
        is set that any value beyond an absolute z-score of 1 is considered
        and outlier.
 
