@@ -25,3 +25,4 @@ v<0.2.7>, <10/14/2022> -- Added vae thresholder
 v<0.2.7>, <10/15/2022> -- Added mmd loss and autodim to vae
 v<0.2.7>, <10/29/2022> -- Added mmd metric to DSN
 v<0.2.7>, <11/01/2022> -- Added sgd model to ocsvm
+v<0.2.7>, <11/06/2022> -- Exposed random_state variable for required thresholders
